--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "9.0.0-alpha.8",
     "graphql": "^16.10.0",
+    "leva": "^0.10.0",
     "next": "15.1.6",
     "payload": "^3.18.0",
     "r3f-perf": "^7.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
